--- a/src/assets/css/sass/abstracts/_forms.scss
+++ b/src/assets/css/sass/abstracts/_forms.scss
@@ -11,7 +11,7 @@ display:flex;
    flex-wrap: wrap;
    border-radius: $border-radius;
    border-color: $border-color-medium;
-   padding: $padding-medium;
+   padding: $padding-heavy;
   max-width: 600px;
   margin: 20px auto;
   background:#fff;
@@ -54,7 +54,9 @@ display:flex;
        display: block;
        clear:both;
        width:50%;
-       margin: 20px auto ;
+       min-height: 40px;
+       margin: auto ;
+       margin-top:30px
 }
 
 }
