--- a/src/components/home/index.html
+++ b/src/components/home/index.html
@@ -1,3 +1,51 @@
     <div>
-        <h1>Home</h1>
+        <div class='modulos' id='cursos_info'>
+            <h1>Cursos Info</h1>
+<div id='informatica_pratica'>
+    <h2>Informática Prática</h2>
+    <div class='categoria'><p>Categoria: Informática</p></div>
+    <div class='div_curso_modulos'>
+        <p class='modulos'>Módulos: 
+            Introdução a Informática, Dispositivos, Pacote Office, Instalação de Programas, Atualização e Formatação, Windows, Digitação, Hardware, Redes, Internet, Backup e Segurança, Gerenciamento de Dados.
+            </p>
+    </div>
+    <div class='div_valor'><p class='valor'>Preço: 90</p></div>
+    <div class='div_ducarao'><p class='duracao'>Duração: 12 meses</p></div>
+</div>
+            Módulos dos Cursos
+           
+            Informática Prática 
+            Introdução a Informática, Dispositivos, Pacote Office, Instalação de Programas, Atualização e Formatação, Windows, Digitação, Hardware, Redes, Internet, Backup e Segurança, Gerenciamento de Dados.
+           
+            Informática Profissional
+            Introdução a Informática, Dispositivos, Pacote Office, Instalação de Programas, Atualização e Formatação, Windows, Digitação, Hardware, Redes, Internet, Backup e Segurança, Gerenciamento de Dados, Inglês Instrumental, Introdução a Banco de Dados.
+            Informática Completo
+            Introdução a Informática, Dispositivos, Pacote Office, Atualização e Formatação, Instalação de Programas, Windows, Redes, Digitação, Hardware, Internet, Backup e Segurança, Gerenciamento de Dados, Inglês Instrumental, Lógica de Programação, Introdução a: HTML, CSS, JS, Photoshop.
+            Informática KIDS
+            Introdução a Informática, Dispositivos, Pacote Office, Instalação de Programas, Windows, Digitação, Hardware, Internet, Programação KIDS. 
+            INGLÊS
+            Inglês Básico
+            Básico 1 (o aluno terá o primeiro contato com o idioma, abecedário, numerais, vocabulário baseado no seu dia a dia e a aprenderá a usar frases simples).
+             Básico 2 (o aluno será capaz de usar frases e pequenos diálogos, compreendendo mais sobre a gramática e a como trabalhar com tempos verbais simples).
+            Inglês Intermediário
+            Intermediário 1 (o aluno começará a se expressar com mais independência, compreendera textos mais comuns além de ser introduzido a outros tempos verbais).
+             Intermediário 2 (o aluno conseguirá trabalhar com todos os tempos verbais, e a se expressar sobre assuntos variados).
+            Inglês Avançado 
+            Avançado 1 (o aluno conseguira se expressar de forma mais natural sem depender do interlocutor, compreender textos e diálogos sobre diversos assuntos, e uma boa compreensão da gramática inglesa). "+
+            Avançado 2 (o aluno será capaz de falar de forma mais fluente, e conhecerá mais sobre a cultura inglesa, expressões idiomáticas, phrasal verbs, além de identificar diferentes sotaques e peculiaridades do idioma).
+            Inglês KIDS 
+            KIDS (a criança aprenderá de forma divertida, espontânea e prática, tendo o contato com a língua inglesa através de atividades, jogos, quadrinhos e dinâmicas onde ela começará a formar seu vocabulário, tendo como base o alfabeto, cores, numerais, itens do dia-a-dia além das expressões bases do idioma).
+            Pre-teen
+            Pre-teen (o aluno será preparado para as próximas etapas do Inglês, onde terá seu vocabulário expandido, trabalhando as bases do idioma de forma dinâmica e interativa). 
+            
+            Excel Avançado
+            Atalhos, Tabelas Dinâmicas, Gráficos Dinâmicos, Formatação Condicional, Validação de Dados, Macros, Segurança de Planilhas e Pastas de Trabalho, Hiperlinks, Dashboards, Importação e Exportação de Dados do Excel e Banco de Dados, Vínculos, Solver, Atingir Meta, Funções Aninhadas. Funções de Lógica de Texto, Funções de Data e Hora, Funções Matemáticas, Funções de Pesquisa, PPROCC e PROCV.
+            
+            Desenvolvimento WEB
+            Lógica de Programação, Wireframes, HTML, CSS, Javascript, Photoshop.
+            Banco de Dados Básico MySQL
+            Introdução a Banco de Dados, Banco de Dados Relacional, Introdução ao SQL, DDL, DML, DQL, DCL, Normalização de Dados. Introdução ao Workbench, Diagrama EER.
+            
+
+        </div>
     </div>
