--- a/src/components/controle_aula/formAddAula.html
+++ b/src/components/controle_aula/formAddAula.html
@@ -5,7 +5,11 @@
       <path d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1h1a1 1 0 0 1 1 1V14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V3.5a1 1 0 0 1 1-1h1v-1z"/>
       <path d="M9.5 1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5h3zm-3-1A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3z"/>
     </svg> Adicionar Aula</h3>
-  
+  <div id='div_status_aula'>
+    <label class='actived_label_aula_concluida' id='label_aula_concluida'><input checked  id='aula_concluida' type='radio' name='status' value='concluida'>Aula Concluida</label>
+    <label class='' id='label_aula_com_falta'><input id='aula_com_falta' type='radio' name='status' value='falta'>Falta</label>
+    <label class='' id='label_aula_remarcada'><input id='aula_remarcada'type='radio' name='status' value='remarcada'>Remarcada</label>
+  </div>
     <div id='div_select_aluno'>
         <label for="nome">Nome:</label>
         <select id='select_aluno'>
@@ -34,7 +38,6 @@
       <label>Aulas Nº:</label>
       <select required id='select_aula' disabled>
         <option value='' disabled selected>Selecione a Aula</option>
-  
         <option value="aula 01">Aula 1</option>
         <option value="aula 02">Aula 2</option>
         <option value="aula 03">Aula 3</option>
@@ -51,7 +54,6 @@
         <option value="aula 14">Aula 14</option>
         <option value="aula 15">Aula 15</option>
         <option value="aula 16">Aula 16</option>
-        <option value="aula reposicão">Aula Reposição</option>
   
     </select>
     </div>
