--- a/src/components/controle_aula/formAddAula.html
+++ b/src/components/controle_aula/formAddAula.html
@@ -65,9 +65,11 @@
     </select>
     </div>
 
-    <div id="div_data_hora">
+    <div id="div_data">
       <label>Data:</label>
       <input required id="data" type="date" /> 
+    </div>
+
       <div id='div_horario'>
         <label>Horário:</label>
       <input id="horario" list='horario_list'>
@@ -83,7 +85,6 @@
         <option value='18h às 19h'/>
         <option value='19h às 21h'/>
       </datalist>
-    </div>
     </div>
     <div id='div_tema'><label>Tema:</label><input  required  id="tema" type="text" /></div>
     <div id='div_detalhes'><label>Detalhes:</label><textarea  required  id="detalhes"></textarea></div>
