--- a/src/assets/css/sass/controle_aula/_form_add_aula.scss
+++ b/src/assets/css/sass/controle_aula/_form_add_aula.scss
@@ -6,7 +6,6 @@ dialog{
 #bg_forms_add{
   overflow: hidden;
 }
-
 .forms{
   @include form_flex;
   border: $border-set-default;
@@ -18,7 +17,6 @@ dialog{
   background: #fff;
   transform: scale(1);
   box-shadow: 0px 1px 2px #666;
-
   .btn_close_form{
     right:0px;
     top:0px;
@@ -55,7 +53,6 @@ dialog{
     flex-grow: 1;}
     input{flex-grow: 1;}
   }
-
   #div_detalhes{
     min-height: 50px;
   }
@@ -63,12 +60,9 @@ dialog{
     width:100%;
     flex-grow: 1;
   }
-
    background:#fff;
-
-    #div_data_hora{
-        display:flex; 
-        max-width: 100%;
+    #div_data, #div_horario{
+      max-width: 50%;
     }
     #select_categoria{display:none;}
     #aluno_nome, #curso_nome{
@@ -86,6 +80,9 @@ dialog{
     }
     #div_select_aluno{
       display:none;
+    }
+    #div_select_bimestre{
+      max-width: 50%;
     }
     #div_select_curso{
       display: none;
@@ -107,7 +104,6 @@ dialog{
             input{
               flex-shrink: 1;
               flex-grow: 0;
-
               -webkit-appearance: none;
               -moz-appearance: none;
               appearance: none;
